--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif; }
-  body .fixedDataTableCellLayout_main:last-child {
-    border-right: 0 !important; }
-  body .table__header {
+  font-family: sans-serif;
+
+  .fixedDataTableCellLayout_main:last-child {
+    border-right: 0 !important;
+  }
+
+  .table__header {
     color: #293742 !important;
     line-height: 1 !important;
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0)) !important;
@@ -12,12 +15,18 @@ body {
     border: none !important;
     font-weight: bold !important;
     font-size: 1em;
-    font-variant: small-caps; }
-  body .table__cell {
-    border: none !important; }
-  body .loadingDiv {
+    font-variant: small-caps;
+  }
+
+  .table__cell {
+    border: none !important;
+  }
+
+  .loadingDiv {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+  }
+}
