--- a/src/Components/Dashboard/index.css
+++ b/src/Components/Dashboard/index.css
@@ -36,14 +36,16 @@
             color: #394b59; }
           .Dashboard .Box .Active .Item .Content .Value {
             font-size: 2em; }
-    .Dashboard .Box .Certificates .Content {
-      display: flex;
-      justify-content: space-evenly; }
-      .Dashboard .Box .Certificates .Content .Header {
-        font-variant: small-caps;
-        color: #394b59; }
-      .Dashboard .Box .Certificates .Content .Value {
-        font-size: 2em; }
+    .Dashboard .Box .Certificates {
+      margin-top: 8px; }
+      .Dashboard .Box .Certificates .Content {
+        display: flex;
+        justify-content: space-evenly; }
+        .Dashboard .Box .Certificates .Content .Header {
+          font-variant: small-caps;
+          color: #394b59; }
+        .Dashboard .Box .Certificates .Content .Value {
+          font-size: 2em; }
     .Dashboard .Box .Consumables {
       margin-top: 8px;
       display: flex;
@@ -118,7 +120,7 @@
           .Dashboard .Box .Centers_Status .Content .Center .Status {
             width: 40%; }
     .Dashboard .Box .Uptime {
-      height: 25%; }
+      height: 35%; }
     .Dashboard .Box .Downtime {
       margin-top: 8px;
-      height: 25%; }
+      height: 35%; }
