--- a/src/Components/Machines/Machine/index.css
+++ b/src/Components/Machines/Machine/index.css
@@ -16,7 +16,8 @@
       height: calc(100% - 150px - 40px);
       flex-direction: column;
       justify-content: flex-start;
-      align-items: center; }
+      align-items: center;
+      overflow-y: auto; }
       .machine__Page .control__And__Info__Box .info__Box .power {
         margin-bottom: 10px; }
       .machine__Page .control__And__Info__Box .info__Box .Meta, .machine__Page .control__And__Info__Box .info__Box .Applications, .machine__Page .control__And__Info__Box .info__Box .Services {
@@ -24,7 +25,10 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        align-items: center; }
+        align-items: center;
+        min-height: 150px;
+        max-height: 300px;
+        overflow-y: auto; }
         .machine__Page .control__And__Info__Box .info__Box .Meta .row, .machine__Page .control__And__Info__Box .info__Box .Applications .row, .machine__Page .control__And__Info__Box .info__Box .Services .row {
           width: 80%;
           height: 35px;
