--- a/src/Components/MachinesMap/index.scss
+++ b/src/Components/MachinesMap/index.scss
@@ -3,52 +3,72 @@
 .Map__Page{
   color: $dark-gray5 !important;
   display: flex;
+  position: relative;
   justify-content: space-between;
   height: 100%;
   width: 100%;
 
-  .ol-attribution ul, .ol-attribution button{
+  .ol-attribution ul, .ol-attribution button, .mapboxgl-ctrl.mapboxgl-ctrl-attrib{
     display: none !important;}
 
   .Map__Box{
-    width: calc(100% - 200px);
+    width: 100%;
     height: 100%;
 
     #map{
       height: 100%;
     }
+
+    .mapboxgl-popup-content{
+      padding: 0;
+    }
+
+    .Center__Details__Popup{
+      max-width: 300px;
+      padding: 0 !important;
+
+      .Header{
+        color: $dark-gray5 !important;
+        font-size: 1.5em;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 30px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+
+      .Content{
+        padding: 10px;
+        max-height: calc(100% - 30px);
+        overflow-y: auto;
+
+        .Machine{
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+        }
+      }
+    }
   }
 
   .Machines__Box{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 200px;
+    position: absolute;
     border-radius: 0;
-    padding: 4px;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    padding-right: 4px;
+    background-color: rgba(255, 255, 255, 0);
+    box-shadow: none;
+    height: 50px;
+    z-index: 999999;
 
     .Header{
       height: 40px;
-    }
-
-    .Content{
-      max-height: calc(100% - 41px);
-      overflow-y: auto;
-
-      .Machine{
-        padding: 1px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        border-bottom: 1px dashed $dark-gray5;
-
-        .Name{
-          text-align: center;
-          font-size: 1.3em;
-          font-variant: small-caps;
-          width: 80%;
-        }
-      }
+      width: 25%;
+      margin: 0;
     }
   }
 }
